--- a/hg38_WRAP.config
+++ b/hg38_WRAP.config
@@ -63,19 +63,19 @@ OUTPUT_PSI_PSO_CALC_FILELST = psi_pso_files.lst
 
 
 ## Advance mode ##
-SKIP_BAM2FASTQ = true
-SKIP_STAR = true
-SKIP_FASTQC = true
-SKIP_RSEQC = true
-SKIP_PSI_PSO_CALC = true
-SKIP_SPLICING_DEFICIENCY = true
-SKIP_HTSEQ_EXON_QUANT = true
+SKIP_BAM2FASTQ = false
+SKIP_STAR = false
+SKIP_FASTQC = false
+SKIP_RSEQC = false
+SKIP_PSI_PSO_CALC = false
+SKIP_SPLICING_DEFICIENCY = false
+SKIP_HTSEQ_EXON_QUANT = false
 SKIP_HTSEQ_INTRON_QUANT = false
-SKIP_HTSEQ_GENE = true
-SKIP_JUNCSALVAGER = true
-SKIP_RNAEDIT = true
-SKIP_OPTITYPE = true
-SKIP_KNOWNVARIANTS = true
-SKIP_RNAINDEL = true
+SKIP_HTSEQ_GENE = false
+SKIP_JUNCSALVAGER = false
+SKIP_RNAEDIT = false
+SKIP_OPTITYPE = false
+SKIP_KNOWNVARIANTS = false
+SKIP_RNAINDEL = false
 
 
